--- a/01-langchain-prompt-templates.ipynb
+++ b/01-langchain-prompt-templates.ipynb
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Hugging Face's `transformers`, OpenAI using the `openai`, and Cohere using the `cohere` library.\n"
+      " Hugging Face's `transformers` library, OpenAI using the `openai` library, and Cohere using the `cohere` library.\n"
      ]
     }
    ],
